{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 196,
  "lineage": "8075016d-23fd-d4e6-a437-7ba8d7d7c09f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_portal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-05d4fae4cf3a51cf6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05d4fae4cf3a51cf6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-071d8578cc2820d64",
            "private_dns": "ip-10-0-0-99.eu-west-2.compute.internal",
            "private_ip": "10.0.0.99",
            "public_dns": "ec2-35-178-204-117.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.204.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01f2dbb1478f9e758",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_service",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-08e2fab45c6ceb9ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08e2fab45c6ceb9ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8f8fd1b07808293",
            "private_dns": "ip-10-0-0-126.eu-west-2.compute.internal",
            "private_ip": "10.0.0.126",
            "public_dns": "ec2-3-8-144-179.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.144.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-045520845f9d8cba1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "portal",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-04bbc5acd0de29560",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04bbc5acd0de29560",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-00d3822c0e6de928f",
            "private_dns": "ip-10-0-0-205.eu-west-2.compute.internal",
            "private_ip": "10.0.0.205",
            "public_dns": "ec2-3-8-237-203.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.237.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0792c6a946408db55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-04f9b80a93a5981c0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04f9b80a93a5981c0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-080aee08e3fdbf3c3",
            "private_dns": "ip-10-0-0-55.eu-west-2.compute.internal",
            "private_ip": "10.0.0.55",
            "public_dns": "ec2-52-56-253-67.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.253.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05f24e2495b91ca2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-037854b7fd5474080",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-037854b7fd5474080",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0acbde52d7dff961f",
            "private_dns": "ip-10-0-0-101.eu-west-2.compute.internal",
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-35-177-251-144.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.251.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac45e03e3fd792ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "service",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-0112619f34ce98d94",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0112619f34ce98d94",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0151ce34ccd37da4c",
            "private_dns": "ip-10-0-0-105.eu-west-2.compute.internal",
            "private_ip": "10.0.0.105",
            "public_dns": "ec2-35-177-214-3.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.214.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e0163c4a61cf3e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-045e180ebc1d8d6be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-045e180ebc1d8d6be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c31e07628528a91f",
            "private_dns": "ip-10-0-0-79.eu-west-2.compute.internal",
            "private_ip": "10.0.0.79",
            "public_dns": "ec2-35-177-218-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.218.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec70d5813a02508e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06199c1397985a965",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-032bbe158afb286bf"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ff2950acf9c580fa",
            "owner_id": "847151757780",
            "vpc_id": "vpc-08a067b8ce9d8d52d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac8252e9f46ed91",
            "original_route_table_id": "rtb-00bace8e5e764c0ba",
            "route_table_id": "rtb-0dfd8ca7b0fc5ca91",
            "vpc_id": "vpc-08a067b8ce9d8d52d"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dfd8ca7b0fc5ca91",
            "owner_id": "847151757780",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff2950acf9c580fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-08a067b8ce9d8d52d"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:security-group/sg-032bbe158afb286bf",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032bbe158afb286bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "847151757780",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08a067b8ce9d8d52d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:subnet/subnet-06199c1397985a965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06199c1397985a965",
            "map_public_ip_on_launch": false,
            "owner_id": "847151757780",
            "vpc_id": "vpc-08a067b8ce9d8d52d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:vpc/vpc-08a067b8ce9d8d52d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00401785f66dd0afb",
            "default_route_table_id": "rtb-0dfd8ca7b0fc5ca91",
            "default_security_group_id": "sg-0468907ad6c411412",
            "dhcp_options_id": "dopt-0481dff28e0e8af9a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08a067b8ce9d8d52d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfd8ca7b0fc5ca91",
            "owner_id": "847151757780"
          }
        }
      ]
    }
  ]
}